"Capa Visual Finalizada"

--- a/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
+++ b/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
@@ -170,5 +170,8 @@
   <ItemGroup>
     <None Include="My Project\key-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\search-12-16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
