"Se crea metodo GuardarPersona en la base de datos"

--- a/CapaDeDatos/CapaDeDatos.vbproj
+++ b/CapaDeDatos/CapaDeDatos.vbproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModeloConexion.vb" />
+    <Compile Include="ModeloPersona.vb" />
+    <Compile Include="ModeloServicios.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
