--- a/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
+++ b/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
@@ -173,5 +173,11 @@
   <ItemGroup>
     <None Include="My Project\search-12-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\add-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\backAgregar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
