"Se guarda correctamente en la tabla persona los datos, excepto telefonos, revisar el Id para que se autoincremente"

--- a/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
+++ b/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
@@ -179,5 +179,11 @@
   <ItemGroup>
     <None Include="My Project\backAgregar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaLogica\CapaLogica.vbproj">
+      <Project>{7b8f7312-e377-4496-8baa-b9d67ae5e6e0}</Project>
+      <Name>CapaLogica</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
