"Se creo windowsform eliminar persona, y metodos y acciones para eliminar en la base de datos, por ahora solo elimina persona y telefonos de la misma"

--- a/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
+++ b/Practico3 PIII-BDII – Bueno-Marcos/CapaVisual.vbproj
@@ -209,5 +209,8 @@
   <ItemGroup>
     <None Include="My Project\backmodiifcarCliente.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\backgroundFormPpal.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
