"Se creo winform Alta Contrato Servicio, se creo combobox que trae los id de persona y servicios"

--- a/CapaDeDatos/CapaDeDatos.vbproj
+++ b/CapaDeDatos/CapaDeDatos.vbproj
@@ -67,6 +67,7 @@
     <Compile Include="ModeloConexion.vb" />
     <Compile Include="ModeloPersona.vb" />
     <Compile Include="ModeloServicios.vb" />
+    <Compile Include="ModuloContrata.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
