--- a/CapaDeDatos/CapaDeDatos.vbproj
+++ b/CapaDeDatos/CapaDeDatos.vbproj
@@ -64,10 +64,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MouloConexion.vb" />
-    <Compile Include="ModuloPersona.vb" />
-    <Compile Include="ModuloServicios.vb" />
-    <Compile Include="ModuloContrata.vb" />
+    <Compile Include="ModeloConexion.vb" />
+    <Compile Include="ModeloPersona.vb" />
+    <Compile Include="ModeloServicios.vb" />
+    <Compile Include="ModeloContrata.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
